add active btn too gorizontal

--- a/public/015-filtr-4.html
+++ b/public/015-filtr-4.html
@@ -1052,10 +1052,13 @@
 														</div>
 													</div>
 													<div class="long-prod__foot-row row align-items-center gx-3 gy-2">
-														<div class="col"><a class="long-prod__buy-btn" href="#modal-callback" data-fancybox="">
+														<div class="col"><a class="long-prod__buy-btn active" href="#modal-callback" data-fancybox="">
 															<svg class="icon icon-plus ">
 																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg>Купить</a>
+															</svg>
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="long-prod__text"><span>Купить</span><span>В корзине</span></span></a>
 														</div>
 														<div class="col-auto"><a class="long-prod__credit" href="#">Оформить рассрочку</a>
 														</div>
@@ -1133,10 +1136,13 @@
 														</div>
 													</div>
 													<div class="long-prod__foot-row row align-items-center gx-3 gy-2">
-														<div class="col"><a class="long-prod__buy-btn" href="#modal-callback" data-fancybox="">
+														<div class="col"><a class="long-prod__buy-btn active" href="#modal-callback" data-fancybox="">
 															<svg class="icon icon-plus ">
 																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg>Купить</a>
+															</svg>
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="long-prod__text"><span>Купить</span><span>В корзине</span></span></a>
 														</div>
 														<div class="col-auto"><a class="long-prod__credit" href="#">Оформить рассрочку</a>
 														</div>
@@ -1214,10 +1220,13 @@
 														</div>
 													</div>
 													<div class="long-prod__foot-row row align-items-center gx-3 gy-2">
-														<div class="col"><a class="long-prod__buy-btn" href="#modal-callback" data-fancybox="">
+														<div class="col"><a class="long-prod__buy-btn active" href="#modal-callback" data-fancybox="">
 															<svg class="icon icon-plus ">
 																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg>Купить</a>
+															</svg>
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="long-prod__text"><span>Купить</span><span>В корзине</span></span></a>
 														</div>
 														<div class="col-auto"><a class="long-prod__credit" href="#">Оформить рассрочку</a>
 														</div>
@@ -1295,10 +1304,13 @@
 														</div>
 													</div>
 													<div class="long-prod__foot-row row align-items-center gx-3 gy-2">
-														<div class="col"><a class="long-prod__buy-btn" href="#modal-callback" data-fancybox="">
+														<div class="col"><a class="long-prod__buy-btn active" href="#modal-callback" data-fancybox="">
 															<svg class="icon icon-plus ">
 																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg>Купить</a>
+															</svg>
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="long-prod__text"><span>Купить</span><span>В корзине</span></span></a>
 														</div>
 														<div class="col-auto"><a class="long-prod__credit" href="#">Оформить рассрочку</a>
 														</div>
@@ -1376,10 +1388,13 @@
 														</div>
 													</div>
 													<div class="long-prod__foot-row row align-items-center gx-3 gy-2">
-														<div class="col"><a class="long-prod__buy-btn" href="#modal-callback" data-fancybox="">
+														<div class="col"><a class="long-prod__buy-btn active" href="#modal-callback" data-fancybox="">
 															<svg class="icon icon-plus ">
 																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg>Купить</a>
+															</svg>
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="long-prod__text"><span>Купить</span><span>В корзине</span></span></a>
 														</div>
 														<div class="col-auto"><a class="long-prod__credit" href="#">Оформить рассрочку</a>
 														</div>
@@ -1457,10 +1472,13 @@
 														</div>
 													</div>
 													<div class="long-prod__foot-row row align-items-center gx-3 gy-2">
-														<div class="col"><a class="long-prod__buy-btn" href="#modal-callback" data-fancybox="">
+														<div class="col"><a class="long-prod__buy-btn active" href="#modal-callback" data-fancybox="">
 															<svg class="icon icon-plus ">
 																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg>Купить</a>
+															</svg>
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="long-prod__text"><span>Купить</span><span>В корзине</span></span></a>
 														</div>
 														<div class="col-auto"><a class="long-prod__credit" href="#">Оформить рассрочку</a>
 														</div>
@@ -1538,10 +1556,13 @@
 														</div>
 													</div>
 													<div class="long-prod__foot-row row align-items-center gx-3 gy-2">
-														<div class="col"><a class="long-prod__buy-btn" href="#modal-callback" data-fancybox="">
+														<div class="col"><a class="long-prod__buy-btn active" href="#modal-callback" data-fancybox="">
 															<svg class="icon icon-plus ">
 																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg>Купить</a>
+															</svg>
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="long-prod__text"><span>Купить</span><span>В корзине</span></span></a>
 														</div>
 														<div class="col-auto"><a class="long-prod__credit" href="#">Оформить рассрочку</a>
 														</div>
@@ -1619,10 +1640,13 @@
 														</div>
 													</div>
 													<div class="long-prod__foot-row row align-items-center gx-3 gy-2">
-														<div class="col"><a class="long-prod__buy-btn" href="#modal-callback" data-fancybox="">
+														<div class="col"><a class="long-prod__buy-btn active" href="#modal-callback" data-fancybox="">
 															<svg class="icon icon-plus ">
 																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg>Купить</a>
+															</svg>
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="long-prod__text"><span>Купить</span><span>В корзине</span></span></a>
 														</div>
 														<div class="col-auto"><a class="long-prod__credit" href="#">Оформить рассрочку</a>
 														</div>
@@ -1700,10 +1724,13 @@
 														</div>
 													</div>
 													<div class="long-prod__foot-row row align-items-center gx-3 gy-2">
-														<div class="col"><a class="long-prod__buy-btn" href="#modal-callback" data-fancybox="">
+														<div class="col"><a class="long-prod__buy-btn active" href="#modal-callback" data-fancybox="">
 															<svg class="icon icon-plus ">
 																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg>Купить</a>
+															</svg>
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="long-prod__text"><span>Купить</span><span>В корзине</span></span></a>
 														</div>
 														<div class="col-auto"><a class="long-prod__credit" href="#">Оформить рассрочку</a>
 														</div>
@@ -1781,10 +1808,13 @@
 														</div>
 													</div>
 													<div class="long-prod__foot-row row align-items-center gx-3 gy-2">
-														<div class="col"><a class="long-prod__buy-btn" href="#modal-callback" data-fancybox="">
+														<div class="col"><a class="long-prod__buy-btn active" href="#modal-callback" data-fancybox="">
 															<svg class="icon icon-plus ">
 																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg>Купить</a>
+															</svg>
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="long-prod__text"><span>Купить</span><span>В корзине</span></span></a>
 														</div>
 														<div class="col-auto"><a class="long-prod__credit" href="#">Оформить рассрочку</a>
 														</div>
@@ -1862,10 +1892,13 @@
 														</div>
 													</div>
 													<div class="long-prod__foot-row row align-items-center gx-3 gy-2">
-														<div class="col"><a class="long-prod__buy-btn" href="#modal-callback" data-fancybox="">
+														<div class="col"><a class="long-prod__buy-btn active" href="#modal-callback" data-fancybox="">
 															<svg class="icon icon-plus ">
 																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg>Купить</a>
+															</svg>
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="long-prod__text"><span>Купить</span><span>В корзине</span></span></a>
 														</div>
 														<div class="col-auto"><a class="long-prod__credit" href="#">Оформить рассрочку</a>
 														</div>
@@ -1943,10 +1976,13 @@
 														</div>
 													</div>
 													<div class="long-prod__foot-row row align-items-center gx-3 gy-2">
-														<div class="col"><a class="long-prod__buy-btn" href="#modal-callback" data-fancybox="">
+														<div class="col"><a class="long-prod__buy-btn active" href="#modal-callback" data-fancybox="">
 															<svg class="icon icon-plus ">
 																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg>Купить</a>
+															</svg>
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="long-prod__text"><span>Купить</span><span>В корзине</span></span></a>
 														</div>
 														<div class="col-auto"><a class="long-prod__credit" href="#">Оформить рассрочку</a>
 														</div>
