--- a/public/index.html
+++ b/public/index.html
@@ -813,7 +813,7 @@
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
-															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
 														</div>
 													</div>
 												</div>
@@ -844,7 +844,7 @@
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
-															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
 														</div>
 													</div>
 												</div>
@@ -875,7 +875,7 @@
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
-															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
 														</div>
 													</div>
 												</div>
@@ -906,7 +906,7 @@
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
-															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
 														</div>
 													</div>
 												</div>
@@ -937,7 +937,7 @@
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
-															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
 														</div>
 													</div>
 												</div>
@@ -968,7 +968,7 @@
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
-															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
 														</div>
 													</div>
 												</div>
@@ -999,7 +999,7 @@
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
-															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
 														</div>
 													</div>
 												</div>
@@ -1030,7 +1030,7 @@
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
-															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
 														</div>
 													</div>
 												</div>
@@ -1061,7 +1061,7 @@
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
-															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
 														</div>
 													</div>
 												</div>
@@ -1092,7 +1092,7 @@
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
-															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
 														</div>
 													</div>
 												</div>
@@ -1123,7 +1123,7 @@
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
-															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
 														</div>
 													</div>
 												</div>
@@ -1154,7 +1154,7 @@
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
-															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
 														</div>
 													</div>
 												</div>
