--- a/public/index.html
+++ b/public/index.html
@@ -811,6 +811,9 @@
 													</div>
 													<div class="col-auto">
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg>
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
 															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
@@ -842,6 +845,9 @@
 													</div>
 													<div class="col-auto">
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg>
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
 															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
@@ -873,6 +879,9 @@
 													</div>
 													<div class="col-auto">
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg>
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
 															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
@@ -904,6 +913,9 @@
 													</div>
 													<div class="col-auto">
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg>
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
 															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
@@ -935,6 +947,9 @@
 													</div>
 													<div class="col-auto">
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg>
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
 															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
@@ -966,6 +981,9 @@
 													</div>
 													<div class="col-auto">
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg>
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
 															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
@@ -997,6 +1015,9 @@
 													</div>
 													<div class="col-auto">
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg>
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
 															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
@@ -1028,6 +1049,9 @@
 													</div>
 													<div class="col-auto">
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg>
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
 															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
@@ -1059,6 +1083,9 @@
 													</div>
 													<div class="col-auto">
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg>
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
 															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
@@ -1090,6 +1117,9 @@
 													</div>
 													<div class="col-auto">
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg>
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
 															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
@@ -1121,6 +1151,9 @@
 													</div>
 													<div class="col-auto">
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg>
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
 															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
@@ -1152,6 +1185,9 @@
 													</div>
 													<div class="col-auto">
 														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg>
 															<svg class="icon icon-check ">
 																<use xlink:href="img/svg/sprite.svg#check"></use>
 															</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
