add scroll to orange tags

--- a/public/015-filtr.html
+++ b/public/015-filtr.html
@@ -1391,37 +1391,71 @@
 										</ul>
 									</div>
 								</div>
-								<div class="sCatalog__tags-row orange row sTags-row-js">
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
-									</div>
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
-									</div>
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
-									</div>
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
-									</div>
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
-									</div>
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
-									</div>
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
-									</div>
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
-									</div>
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
-									</div>
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
-									</div>
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
-									</div>
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
-									</div>
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
-									</div>
-									<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
-									</div>
-									<div class="col-sm-auto d-block">
-										<div class="sCatalog__btn sCatalog__btn--orange-toggle sTags-btn-js"><span>Показать еще</span><span>Скрыть</span>
+								<div class="tags-slider-wrap">
+									<div class="tags-slider-js">
+										<div class="tag-wrapper">
+											<div class="sCatalog__tags-row row sTags-row-js">
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												</div>
+												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												</div>
+												<div class="col-auto d-none d-md-block"> 
+													<div class="sCatalog__btn sCatalog__btn--orange-toggle sTags-btn-js"><span>Показать еще</span><span>Скрыть</span>
+													</div>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
