--- a/public/015-filtr-2.html
+++ b/public/015-filtr-2.html
@@ -1387,61 +1387,61 @@
 									<div class="tags-slider-js">
 										<div class="tag-wrapper">
 											<div class="sCatalog__tags-row row sTags-row-js">
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Asko</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Miele</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Bosch</a>
 												</div>
-												<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--orange-tag" href="#">Стиральные машины Gorenje</a>
 												</div>
 												<div class="col-auto d-none d-md-block"> 
 													<div class="sCatalog__btn sCatalog__btn--orange-toggle sTags-btn-js"><span>Показать еще</span><span>Скрыть</span>
