--- a/public/index.html
+++ b/public/index.html
@@ -793,7 +793,7 @@
 								<div class="swiper-slide">
 									<div class="prod-item">
 										<div class="prod-item__row row align-items-center">
-											<div class="col-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-1.png" alt=""/></a>
+											<div class="col-xxl-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-1.png" alt=""/></a>
 											</div>
 											<div class="col"><a class="prod-item__title" href="#">Стиральная машина HAIER HW70-12829A</a>
 												<div class="prod-item__chars">
@@ -827,7 +827,7 @@
 								<div class="swiper-slide">
 									<div class="prod-item">
 										<div class="prod-item__row row align-items-center">
-											<div class="col-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-2.png" alt=""/></a>
+											<div class="col-xxl-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-2.png" alt=""/></a>
 											</div>
 											<div class="col"><a class="prod-item__title" href="#">Стиральная машина HAIER HW70-12829A</a>
 												<div class="prod-item__chars">
@@ -861,7 +861,7 @@
 								<div class="swiper-slide">
 									<div class="prod-item">
 										<div class="prod-item__row row align-items-center">
-											<div class="col-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-3.png" alt=""/></a>
+											<div class="col-xxl-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-3.png" alt=""/></a>
 											</div>
 											<div class="col"><a class="prod-item__title" href="#">Стиральная машина HAIER HW70-12829A</a>
 												<div class="prod-item__chars">
@@ -895,7 +895,7 @@
 								<div class="swiper-slide">
 									<div class="prod-item">
 										<div class="prod-item__row row align-items-center">
-											<div class="col-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-1.png" alt=""/></a>
+											<div class="col-xxl-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-1.png" alt=""/></a>
 											</div>
 											<div class="col"><a class="prod-item__title" href="#">Стиральная машина HAIER HW70-12829A</a>
 												<div class="prod-item__chars">
@@ -929,7 +929,7 @@
 								<div class="swiper-slide">
 									<div class="prod-item">
 										<div class="prod-item__row row align-items-center">
-											<div class="col-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-2.png" alt=""/></a>
+											<div class="col-xxl-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-2.png" alt=""/></a>
 											</div>
 											<div class="col"><a class="prod-item__title" href="#">Стиральная машина HAIER HW70-12829A</a>
 												<div class="prod-item__chars">
@@ -963,7 +963,7 @@
 								<div class="swiper-slide">
 									<div class="prod-item">
 										<div class="prod-item__row row align-items-center">
-											<div class="col-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-3.png" alt=""/></a>
+											<div class="col-xxl-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-3.png" alt=""/></a>
 											</div>
 											<div class="col"><a class="prod-item__title" href="#">Стиральная машина HAIER HW70-12829A</a>
 												<div class="prod-item__chars">
@@ -997,7 +997,7 @@
 								<div class="swiper-slide">
 									<div class="prod-item">
 										<div class="prod-item__row row align-items-center">
-											<div class="col-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-1.png" alt=""/></a>
+											<div class="col-xxl-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-1.png" alt=""/></a>
 											</div>
 											<div class="col"><a class="prod-item__title" href="#">Стиральная машина HAIER HW70-12829A</a>
 												<div class="prod-item__chars">
@@ -1031,7 +1031,7 @@
 								<div class="swiper-slide">
 									<div class="prod-item">
 										<div class="prod-item__row row align-items-center">
-											<div class="col-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-2.png" alt=""/></a>
+											<div class="col-xxl-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-2.png" alt=""/></a>
 											</div>
 											<div class="col"><a class="prod-item__title" href="#">Стиральная машина HAIER HW70-12829A</a>
 												<div class="prod-item__chars">
@@ -1065,7 +1065,7 @@
 								<div class="swiper-slide">
 									<div class="prod-item">
 										<div class="prod-item__row row align-items-center">
-											<div class="col-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-3.png" alt=""/></a>
+											<div class="col-xxl-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-3.png" alt=""/></a>
 											</div>
 											<div class="col"><a class="prod-item__title" href="#">Стиральная машина HAIER HW70-12829A</a>
 												<div class="prod-item__chars">
@@ -1099,7 +1099,7 @@
 								<div class="swiper-slide">
 									<div class="prod-item">
 										<div class="prod-item__row row align-items-center">
-											<div class="col-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-1.png" alt=""/></a>
+											<div class="col-xxl-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-1.png" alt=""/></a>
 											</div>
 											<div class="col"><a class="prod-item__title" href="#">Стиральная машина HAIER HW70-12829A</a>
 												<div class="prod-item__chars">
@@ -1133,7 +1133,7 @@
 								<div class="swiper-slide">
 									<div class="prod-item">
 										<div class="prod-item__row row align-items-center">
-											<div class="col-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-2.png" alt=""/></a>
+											<div class="col-xxl-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-2.png" alt=""/></a>
 											</div>
 											<div class="col"><a class="prod-item__title" href="#">Стиральная машина HAIER HW70-12829A</a>
 												<div class="prod-item__chars">
@@ -1167,7 +1167,7 @@
 								<div class="swiper-slide">
 									<div class="prod-item">
 										<div class="prod-item__row row align-items-center">
-											<div class="col-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-3.png" alt=""/></a>
+											<div class="col-xxl-auto"><a class="prod-item__img" href="#"><img loading="lazy" src="img/@2x/sFamiliar-3.png" alt=""/></a>
 											</div>
 											<div class="col"><a class="prod-item__title" href="#">Стиральная машина HAIER HW70-12829A</a>
 												<div class="prod-item__chars">
